# triangle-example

./: .gitignore  .gitmodules  LICENSE  README.md
cmake/: CMakeLists.txt
content/model/: triangle.txt
content/shader/: triangle.frag  triangle.hlsl  triangle.vert
include/: Color.h  Triangle.h  Vertex.h
include/defn/: Graphics.h
include/defn/categ/: Shader.h
include/graphics/: Direct3d.h  wgl.h
include/graphics/direct3d/: Shader.h
include/graphics/direct3d/shader/: Pixel.h  Vertex.h
include/graphics/direct3d/vertex/: Buffer.h
include/intf/: Graphics.h
include/intf/graphics/: Shader.h  Vertex.h
include/utl/: Color.h  Vertex.h
src/: Triangle.cpp
src/graphics/: Direct3d.cpp  wgl.cpp
src/graphics/direct3d/: Shader.cpp
src/graphics/direct3d/shader/: Pixel.cpp  Vertex.cpp
src/graphics/direct3d/vertex/: Buffer.cpp
src/intf/graphics/: Shader.cpp
win/: main.cpp  main_msvc.cpp
